# HCDR_HQP

./: README.md
cdpr/: CMakeLists.txt  package.xml  panda.txt  upcaroca.sdf
cdpr/include/cdpr/: cdpr.h  cdpr_plugin.h
cdpr/launch/: cdpr.launch
cdpr/sdf/: caroca.sdf  caroca.urdf  caroca.yaml  caroca_nocables.sdf  model.sdf  panda.urdf  platform.urdf  platform_2.urdf  upcaroca.sdf  upcaroca.yaml  uppanda.urdf  ur5.sdf
cdpr/sdf/meshes/visual/: platform.stl
cdpr/src/: cdpr.cpp  cdpr_plugin.cpp
cdpr_controllers/: CMakeLists.txt  package.xml
cdpr_controllers/action/: FrankaSE3.action  JointPosture.action
cdpr_controllers/include/cdpr_controllers/: qp.h
cdpr_controllers/include/cdpr_controllers/controller/: controller.hpp
cdpr_controllers/include/cdpr_controllers/server/: action_server_base.hpp  franka_se3_server.hpp  joint_posture_server.hpp  platform_se3_server.hpp  wholebody_server.hpp
cdpr_controllers/include/cdpr_controllers/simulator/: simulator.hpp
cdpr_controllers/include/cdpr_controllers/task/: Franka_pos_fix.hpp  Pf_ori_fix.hpp  Pf_pos_fix.hpp  SE3_Track.hpp
cdpr_controllers/launch/: cdpr_pid_qp.launch
cdpr_controllers/scripts/: cdpr_client.py  plot.py
cdpr_controllers/src/controller/: controller.cpp
cdpr_controllers/src/server/: franka_se3_server.cpp  joint_posture_server.cpp  platform_se3_server.cpp  wholebody_server.cpp
cdpr_controllers/src/simulator/: simulator.cpp
cdpr_controllers/src/task/: Franka_pos_fix.cpp  Pf_ori_fix.cpp  Pf_pos_fix.cpp  SE3_Track.cpp
cdpr_controllers/txt/: time_plot.txt
cdpr_controllers/txt/플랫폼정지/: desired_se3_pose.txt  platform.txt  se3_pose.txt  time_plot.txt
cdpr_controllers/txt/플랫폼정지/싱귤러1/: desired_se3_pose.txt  franka_q.txt  platform.txt  se3_pose.txt  time_plot.txt
cdpr_controllers/txt/플랫폼정지/싱귤러2/: desired_se3_pose.txt  franka_q.txt  platform.txt  se3_pose.txt  time_plot.txt
cdpr_controllers/txt/플랫폼정지/태스크1/: desired_se3_pose.txt  franka_q.txt  platform.txt  se3_pose.txt  time_plot.txt
rci_cdpr_controller/: CMakeLists.txt  package.xml
rci_cdpr_controller/include/rci_cdpr_controller/math/: math.hpp
rci_cdpr_controller/include/rci_cdpr_controller/robot/: robot.hpp
rci_cdpr_controller/include/rci_cdpr_controller/solver/: HQP_solver.hpp
rci_cdpr_controller/include/rci_cdpr_controller/task/: Arm_Control_Task.hpp  JointLimitAvoidanceTask.hpp  Joint_Posture_Task.hpp  Simple_Torque_Task.hpp  Singularity_Avoidance_Task.hpp  Torque_minimize_task.hpp  platform_parallel_task.hpp  platform_static_task.hpp
rci_cdpr_controller/include/rci_cdpr_controller/trajectory/: SE3_cubic.hpp  joint_cubic.hpp
rci_cdpr_controller/src/math/: math.cpp
rci_cdpr_controller/src/robot/: robot.cpp
rci_cdpr_controller/src/solver/: HQP_solver.cpp
rci_cdpr_controller/src/task/: Arm_Control_Task.cpp  JointLimitAvoidanceTask.cpp  Joint_Posture_Task.cpp  Simple_Torque_Task.cpp  Singularity_Avoidance_Task.cpp  Torque_minimize_task.cpp  platform_parallel_task.cpp  platform_static_task.cpp
rci_cdpr_controller/src/trajectory/: SE3_cubic.cpp  joint_cubic.cpp
