<?xml version="1.0"?>
<package format="3">
  <name>cdpr_controllers</name>
  <version>0.0.0</version>
  <description>Controllers for CDPR</description>

  <maintainer email="lee081847@khu.ac.kr">Seulchan Lee</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>rci_cdpr_controller</depend>
  <depend>cdpr</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>pinocchio</depend>
  <depend>tf_conversions</depend>
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
