<?xml version="1.0"?>
<package format="3">
  <name>rci_cdpr_controller</name>
  <version>1.0.0</version>
  <description>
    controller for RCI
  </description>
  
  <license>BSD</license>
  <author>Seulchan Lee</author>
  <maintainer email="lee081847@khu.ac.kr">Seulchan Lee</maintainer>

  <build_depend>git</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>pinocchio</depend>
  <depend>eiquadprog</depend>
  <depend>eigenpy</depend>
  <depend>boost</depend>
  <depend>graphviz</depend>
  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
